<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textDisplay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:text="asdf"
            android:textColor="@android:color/black"
            android:textSize="45sp" />

    </LinearLayout>

    <TableLayout
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="8">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/storeAbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/storeA" />

            <Button
                android:id="@+id/storeBbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/storeB" />

            <Button
                android:id="@+id/storeCbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/storeX" />

            <Button
                android:id="@+id/storeXbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/storeY" />

            <Button
                android:id="@+id/storeYbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/storeZ" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/varAbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/varA" />

            <Button
                android:id="@+id/varBbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/varB" />

            <Button
                android:id="@+id/varCbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/varX" />

            <Button
                android:id="@+id/varXbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/varY" />

            <Button
                android:id="@+id/varYbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/varZ" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/leftbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/left" />

            <Button
                android:id="@+id/rightbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/right" />

            <Button
                android:id="@+id/lparenbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/lparen" />

            <Button
                android:id="@+id/rparenbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/rparen" />

            <Button
                android:id="@+id/delbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/del" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/num7btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/num7" />

            <Button
                android:id="@+id/num8btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/num8" />

            <Button
                android:id="@+id/num9btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/num9" />

            <Button
                android:id="@+id/plusbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/plus" />
            <Button
                android:id="@+id/pctbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/pct" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/num4btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/num4" />

            <Button
                android:id="@+id/num5btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/num5" />

            <Button
                android:id="@+id/num6btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/num6" />

            <Button
                android:id="@+id/minusbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/minus" />
            <Button
                android:id="@+id/clearbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/clear" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/num1btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="buttonPress"
                    android:text="@string/num1" />

                <Button
                    android:id="@+id/num0btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="buttonPress"
                    android:text="@string/num0" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/num2btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="buttonPress"
                    android:text="@string/num2" />

                <Button
                    android:id="@+id/dotbtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="buttonPress"
                    android:text="@string/dot" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/num3btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="buttonPress"
                    android:text="@string/num3" />

                <Button
                    android:id="@+id/ansbtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="buttonPress"
                    android:text="@string/ans" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/starbtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="buttonPress"
                    android:text="@string/star" />

                <Button
                    android:id="@+id/slashbtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="buttonPress"
                    android:text="@string/slash" />

            </LinearLayout>
            <Button
                app:backgroundTint="@null"
                android:background="@color/orange"
                android:id="@+id/equalsbtn"
                android:textSize="40sp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buttonPress"
                android:text="@string/equals" />


        </TableRow>
    </TableLayout>

</LinearLayout>